[package]
name = "warpine"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
kvm-bindings = "0.14.0"
kvm-ioctls = "0.24.0"
libc = "0.2.183"
log = "0.4"
softbuffer = "0.4.8"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
winit = "0.30.13"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
