[package]
name = "warpine"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0-only"
default-run = "warpine"

[dependencies]
kvm-bindings = "0.14.0"
kvm-ioctls = "0.24.0"
libc = "0.2.183"
log = "0.4"
sdl2 = { version = "0.37", features = ["unsafe_textures"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
gdbstub = "0.7"
gdbstub_arch = "0.3"
encoding_rs = "0.8"
object = { version = "0.36", features = ["read"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
